--- a/src/components/TimeLine.astro
+++ b/src/components/TimeLine.astro
@@ -1,4 +1,5 @@
 <section class="container mx-auto">
+  <h2 class="text-center pl-8">A Detailed Summary of Life</h2>
   <ul class="timeline">
     <li class="timeline">
       <div class="icon done"></div>
