--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,5 +21,20 @@ const { title } = Astro.props;
 	</body>
 </html>
 <style is:global>
+*{
+	margin: 0;
+	padding: 0;
+}
 
+*, *::before, *::after{
+	box-sizing: border-box;
+}
+
+span, p{
+text-wrap: pretty;
+}
+
+h1, h2, h3, h4, h5, h6{
+	text-wrap: balance;
+}
 </style>
