--- a/src/components/TimeLine.astro
+++ b/src/components/TimeLine.astro
@@ -1,137 +1,145 @@
-<section class="container mx-auto">
-  <h2 class="text-center pl-8">A Detailed Summary of Life</h2>
+---
+import Check from "../../public/icons/Check.astro";
+---
+
+<section class="container px-5 lg:md:sm:mx-auto">
+  <h2 class="text-4xl text-center pl-8">A Detailed Summary of Life</h2>
   <ul class="timeline">
     <li class="timeline">
-      <div class="icon done"></div>
+      <Check/>
       <details class="panel">
         <summary class="flex flex-wrap justify-between" style="display: flex;">
           <span class="bg-red">INVERSIONES Y SERVICIOS JOLG S.A.C </span>
           <p>ene. 2023 – feb. 2023</p>
         </summary>
-        <p class="p-0">
-          Desarrollador Fullstack –
-          <strong> “Proyecto – Ojo celeste”</strong>
-          <ul class="list-disc p-5">
-            Empresa Inversiones y Servicios Jolg
-            <li class="pl-5"> Construcción de nuevas interfaces en blade </li>
-            <li class="pl-5"> Diseño de nuevas relaciones en laravel 8 </li>
-            <li class="pl-5"> Actualizaciones en el Api rest </li>
-          </ul>
-        </p>
+        <div class="pb-5">
+          <p class="mt-4 pl-5">
+            Desarrollador Fullstack –
+            <strong> “Proyecto – Ojo celeste”</strong>
+            <ul>
+              <li class="px-5"> • Construcción de nuevas interfaces en blade </li>
+              <li class="px-5"> • Diseño de nuevas relaciones en laravel 8 </li>
+              <li class="px-5"> • Actualizaciones en el Api rest </li>
+            </ul>
+          </p>
+        </div>
       </details>
     </li>
 
     <li class="timeline">
-      <div class="icon done"></div>
+      <Check/>
       <details class="panel">
         <summary class="flex flex-wrap justify-between" style="display: flex;">
           <span class="bg-red">EMILIMA S.A</span>
           <p>jul. 2022 – oct. 2022</p>
         </summary>
-        <p class="p-0">
-          Analista programador –
-          <strong> “Proyecto – MultiPage Emilima”</strong>
-          <ul class="list-disc p-5">
-            Empresa Inversiones y Servicios Jolg
-            <li class="pl-5"> Construcción de nueva vista para el ISO 37001 </li>
-            <li class="pl-5"> Construcción de la sección ISO 37001 en el gestor de contenido </li>
-            <li class="pl-5"> Carga de información de los documentos en regla </li>
-          </ul>
-        </p>
-        <p class="p-0">
-          Analista programador –
-          <strong> “Proyecto – Parking PDE”</strong>
-          <ul class="list-disc p-5">
-            Empresa Inversiones y Servicios Jolg
-            <li class="pl-5"> Actualizaciones en el api rest </li>
-            <li class="pl-5"> Construcción del api rest en Node.js </li>
-            <li class="pl-5"> Construcción de nuevas funcionalidades de control de ticket rápido </li>
-            <li class="pl-5">Construcción de nuevo perfil de usuario </li>
-          </ul>
-        </p>
-        <p class="p-0">
-          Analista programador –
-          <strong> “Proyecto – HelpDesk”</strong>
-          <ul class="list-disc p-5">
-            Empresa Inversiones y Servicios Jolg
-            <li class="pl-5"> Construcción de las nuevas interfaces </li>
-            <li class="pl-5"> Integración con el api rest </li>
-          </ul>
-        </p>
+        <div class="pb-5">
+          <p class="mt-4 pl-5">
+            Analista programador –
+            <strong> “Proyecto – MultiPage Emilima”</strong>
+            <ul class="pl-2">
+              <li class="px-5"> • Construcción de nueva vista para el ISO 37001 </li>
+              <li class="px-5"> • Construcción de la sección ISO 37001 en el gestor de contenido </li>
+              <li class="px-5"> • Carga de información de los documentos en regla </li>
+            </ul>
+          </p>
+          <p class="mt-4 pl-5">
+            Analista programador –
+            <strong> “Proyecto – Parking PDE”</strong>
+            <ul class="pl-2">
+              <li class="px-5"> • Actualizaciones en el api rest </li>
+              <li class="px-5"> • Construcción del api rest en Node.js </li>
+              <li class="px-5"> • Construcción de nuevas funcionalidades de control de ticket rápido </li>
+              <li class="px-5"> • Construcción de nuevo perfil de usuario </li>
+            </ul>
+          </p>
+          <p class="mt-4 pl-5">
+            Analista programador –
+            <strong> “Proyecto – HelpDesk”</strong>
+            <ul class="pl-2">
+              <li class="px-5"> • Construcción de las nuevas interfaces </li>
+              <li class="px-5"> • Integración con el api rest </li>
+            </ul>
+          </p>
+        </div>
       </details>
     </li>
 
     <li class="timeline">
-      <div class="icon done"></div>
+      <Check/>
       <details class="panel">
         <summary class="flex flex-wrap justify-between" style="display: flex;">
           <span class="bg-red">PISCO TECHNOLOGIES </span>
           <p>feb. 2021 – jun. 2022</p>
         </summary>
-        <p class="p-0">
-          Desarrollador Fullstack MERN –
-          <strong> “Proyecto Circuito Mágico (CMA)” </strong>
-          <ul class="list-disc p-5">
-            <li class="pl-5"> Diseño de la arquitectura para la solución </li>
-            <li class="pl-5"> Integración del api rest en Node.js </li>
-            <li class="pl-5"> Construcción de interfaces en React.js y Next.js </li>
-            <li class="pl-5"> Construcción del app administrador en React.js </li>
-            <li class="pl-5"> Construcción de la web MultiPage en Next.js </li>
-            <li class="pl-5"> Integración con el api rest construido </li>
-          </ul>
-        </p>
-        <p class="p-0">
-          Desarrollador Frontend –
-          <strong> “Proyecto – Entradas Lima” </strong>
-          <ul class="list-disc p-5">
-            <li class="pl-5"> Construcción de nuevas interfaces web con Vue.js </li>
-            <li class="pl-5"> Integración con el api rest </li>
-          </ul>
-        </p>
-        <p class="p-0">
-          Desarrollador Web –
-          <strong> “Proyecto – MultiPage Emilima” </strong>
-          <ul class="list-disc p-5">
-            <li class="pl-5"> Construcción de la arquitectura Frontend </li>
-            <li class="pl-5"> Construcción de las interfaces web con HTML, Css3 y Javascript </li>
-            <li class="pl-5"> Construcción de un administrador para el sitio web con Vue.js </li>
-            <li class="pl-5"> Construcción del api rest en laravel </li>
-            <li class="pl-5"> Integración del api rest construido </li>
-          </ul>
-        </p>
-        <p class="p-0">
-          Desarrollador Fullstack PHP –
-          <strong> “Proyecto – Compromisos con la ciudad MML” </strong>
-          <ul class="list-disc p-5">
-            <li class="pl-5"> Construcción del api rest en PHP </li>
-            <li class="pl-5"> Construcción de la arquitectura Frontend </li>
-            <li class="pl-5"> Construcción de las interfaces web HTML, Css3 y Javascript </li>
-            <li class="pl-5"> Construcción de un administrador para el sitio web con React.js </li>
-            <li class="pl-5"> Integración con el api rest </li>
-          </ul>
-        </p>
+        <div class="pb-5">
+          <p class="mt-4 pl-5">
+            Desarrollador Fullstack MERN –
+            <strong> “Proyecto Circuito Mágico (CMA)” </strong>
+            <ul class="pl-2">
+              <li class="px-5"> • Diseño de la arquitectura para la solución </li>
+              <li class="px-5"> • Integración del api rest en Node.js </li>
+              <li class="px-5"> • Construcción de interfaces en React.js y Next.js </li>
+              <li class="px-5"> • Construcción del app administrador en React.js </li>
+              <li class="px-5"> • Construcción de la web MultiPage en Next.js </li>
+              <li class="px-5"> • Integración con el api rest construido </li>
+            </ul>
+          </p>
+          <p class="mt-4 pl-5">
+            Desarrollador Frontend –
+            <strong> “Proyecto – Entradas Lima” </strong>
+            <ul class="pl-2">
+              <li class="px-5"> • Construcción de nuevas interfaces web con Vue.js </li>
+              <li class="px-5"> • Integración con el api rest </li>
+            </ul>
+          </p>
+          <p class="mt-4 pl-5">
+            Desarrollador Web –
+            <strong> “Proyecto – MultiPage Emilima” </strong>
+            <ul class="pl-2">
+              <li class="px-5"> • Construcción de la arquitectura Frontend </li>
+              <li class="px-5"> • Construcción de las interfaces web con HTML, Css3 y Javascript </li>
+              <li class="px-5"> • Construcción de un administrador para el sitio web con Vue.js </li>
+              <li class="px-5"> • Construcción del api rest en laravel </li>
+              <li class="px-5"> • Integración del api rest construido </li>
+            </ul>
+          </p>
+          <p class="mt-4 pl-5">
+            Desarrollador Fullstack PHP –
+            <strong> “Proyecto – Compromisos con la ciudad MML” </strong>
+            <ul class="pl-2">
+              <li class="px-5"> • Construcción del api rest en PHP </li>
+              <li class="px-5"> • Construcción de la arquitectura Frontend </li>
+              <li class="px-5"> • Construcción de las interfaces web HTML, Css3 y Javascript </li>
+              <li class="px-5"> • Construcción de un administrador para el sitio web con React.js </li>
+              <li class="px-5"> • Integración con el api rest </li>
+            </ul>
+          </p>
+        </div>
       </details>
     </li>
 
     <li class="timeline">
-      <div class="icon done"></div>
+      <Check/>
       <details class="panel">
         <summary class="flex flex-wrap justify-between" style="display: flex;">
           <span class="bg-red">EN VIVO ENTRETAINMENT E.I.R.L </span>
           <p>ene. 2020 – ene. 2020</p>
         </summary>
-        <p class="p-0">
-          Asistente Logístico -
-          <strong> “Gaming House Mall del Sur”</strong>
-          <ul class="list-disc p-5">
-            <li class="pl-5"> Apoyo en seguimiento de los movimientos de mercancía desde los
-              proveedores hasta su destino final </li>
-            <li class="pl-5"> Organización de entrada y salida de materiales de los diferentes
-              departamentos </li>
-            <li class="pl-5"> Atención al cliente resolviendo incidencias o dudas relacionadas con la
-              logística </li>
-          </ul>
-        </p>
+        <div class="pb-5">
+          <p class="mt-4 pl-5">
+            Asistente Logístico -
+            <strong> “Gaming House Mall del Sur”</strong>
+            <ul class="pl-2">
+              <li class="px-5"> • Apoyo en seguimiento de los movimientos de mercancía desde los
+                proveedores hasta su destino final </li>
+              <li class="px-5"> • Organización de entrada y salida de materiales de los diferentes
+                departamentos </li>
+              <li class="px-5"> • Atención al cliente resolviendo incidencias o dudas relacionadas con la
+                logística </li>
+            </ul>
+          </p>
+        </div>
       </details>
     </li>
 
@@ -206,23 +214,8 @@
     background-color: #fafafa;
     z-index: 999;
     border-radius: 50%;
-    font-family: Font Awesome\5 Free;
   }
-  .timeline > li > .icon:before {
-    content: "\f192";
-  }
-  .timeline > li > .icon.done {
-    color: #23b5af;
-  }
-  .timeline > li > .icon.done:before {
-    content: "\f058";
-  }
-  .timeline > li > .icon.working {
-    color: #eeba4c;
-  }
-  .timeline > li > .icon.working:before {
-    content: "\f017";
-  }
+
 
   @media (min-width: 576px) {
     .timeline:before {
@@ -242,9 +235,6 @@
     }
     .timeline > li:nth-child(even) > :nth-child(even) {
       float: right;
-    }
-    .timeline > li > .icon {
-      left: 50%;
     }
   }
 </style>
