--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,13 @@
 ---
-import TimeLine from '../components/TimeLine.astro';
 import Layout from '../layouts/Layout.astro';
+// import TimeLine from '../components/TimeLine.astro';
+import Tab from '../components/Tabs/Tab.astro';
+
 ---
 
 <Layout title="Welcome to Astro.">
-	<TimeLine/>
+	<!-- <TimeLine/> -->
+	<Tab/>
 </Layout>
 
 <style>
