--- a/src/components/Tabs/Tab.astro
+++ b/src/components/Tabs/Tab.astro
@@ -1,5 +1,6 @@
 ---
 import About from "../About.astro";
+import Skills from "../Skills/Skills.astro";
 import TimeLine from "../TimeLine.astro";
 import TabItem from "./TabItem.astro";
 import TabItemContent from "./TabItemContent.astro";
@@ -23,7 +24,9 @@ import TabItemContent from "./TabItemContent.astro";
       <TimeLine />
     </TabItemContent>
     <!-- Skills -->
-    <TabItemContent dataTab="3" />
+    <TabItemContent dataTab="3"> 
+      <Skills/>
+    </TabItemContent>
     <!-- Habildiades -->
     <TabItemContent dataTab="4" />
     <!-- Proyectos -->
