--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -3,7 +3,7 @@ import { Image } from "astro:assets";
 import imgWebp from "../../public/img.webp";
 ---
 
-<section class="container mx-auto">
+<section class="container mx-auto h-screen">
   <div class="flex items-center justify-center mx-auto h-screen">
     <div class="w-1/2">
       <h2 class="text-7xl mb-3">Junior Pezantes</h2>
