--- a/src/components/Tabs/TabItemContent.astro
+++ b/src/components/Tabs/TabItemContent.astro
@@ -10,7 +10,6 @@ const {dataTab} = Astro.props;
   transition: all 400ms cubic-bezier(.4,0,.2,1);
   opacity: 0;
   max-height: 0;
-  pointer-events: none;
   overflow: hidden;
   transform: translateY(20px);
 }
@@ -20,7 +19,7 @@ const {dataTab} = Astro.props;
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  max-height: fit-content;
+  max-height: 100%;
   transition: all 400ms cubic-bezier(.4,0,.2,1);
   transform: translateY(0px);
 }
