--- a/public/skills/MongoDB.astro
+++ b/public/skills/MongoDB.astro
@@ -5,7 +5,7 @@
   version="1.1"
   xmlns="http://www.w3.org/2000/svg"
   preserveAspectRatio="xMidYMid"
-  class="absolute overflow-visible bottom-[34%] h-[60%] w-[60%] z-10 transition group-hover/skill:-translate-y-1 opacity-0"
+  class="absolute overflow-visible bottom-[34%] h-[60%] w-[60%] z-10 transition group-hover/skill:-translate-y-1"
 >
   <title>MongoDB</title>
   <g>
