--- a/src/components/Tabs/Tab.astro
+++ b/src/components/Tabs/Tab.astro
@@ -14,7 +14,7 @@ import Projects from "../Projects/Project.astro"
     <TabItem dataTab="3" Item="Skills" />
     <TabItem dataTab="4" Item="Proyectos" />
   </header>
-  <div class="tab-contents overflow-y-auto">
+  <div class="tab-contents overflow-y-scroll">
     <!-- Inicio -->
     <TabItemContent dataTab="1">
       <About />
