--- a/public/skills/AstroLogo.astro
+++ b/public/skills/AstroLogo.astro
@@ -1,5 +1,5 @@
 <svg
-  class="absolute overflow-visible bottom-[34%] h-[60%] w-[60%] z-10 transition group-hover/skill:-translate-y-1 opacity-0"
+  class="absolute overflow-visible bottom-[34%] h-[60%] w-[60%] z-10 transition group-hover/skill:-translate-y-1"
   xmlns="http://www.w3.org/2000/svg"
   fill="none"
   viewBox="-11 0 107 107"
