--- a/public/skills/Deno.astro
+++ b/public/skills/Deno.astro
@@ -7,7 +7,7 @@
   xmlns:xlink="http://www.w3.org/1999/xlink"
   preserveAspectRatio="xMidYMid"
   class="absolute overflow-visible bottom-[34%] h-[60%] w-[60%] z-10 transition
-group-hover/skill:-translate-y-1 opacity-0"
+group-hover/skill:-translate-y-1"
 >
   <title>deno</title>
   <g>
