--- a/public/skills/Figma.astro
+++ b/public/skills/Figma.astro
@@ -1,5 +1,5 @@
 <svg
-  class="absolute overflow-visible bottom-[34%] h-[60%] w-[60%] z-10 transition group-hover/skill:-translate-y-1 opacity-0"
+  class="absolute overflow-visible bottom-[34%] h-[60%] w-[60%] z-10 transition group-hover/skill:-translate-y-1"
   xmlns="http://www.w3.org/2000/svg"
   xml:space="preserve"
   viewBox="0 0 2499 2499"
