--- a/public/skills/Netlify.astro
+++ b/public/skills/Netlify.astro
@@ -6,7 +6,7 @@
   viewBox="0 0 256 226"
   version="1.1"
   preserveAspectRatio="xMidYMid"
-  class="absolute overflow-visible bottom-[34%] h-[60%] w-[60%] z-10 transition group-hover/skill:-translate-y-1 opacity-0"
+  class="absolute overflow-visible bottom-[34%] h-[60%] w-[60%] z-10 transition group-hover/skill:-translate-y-1"
 >
   <title>netlify</title>
   <g>
