--- a/public/skills/PhpStorm.astro
+++ b/public/skills/PhpStorm.astro
@@ -6,7 +6,7 @@
   xmlns="http://www.w3.org/2000/svg"
   preserveAspectRatio="xMidYMid"
   class="absolute overflow-visible bottom-[34%] h-[60%] w-[60%] z-10 transition
-group-hover/skill:-translate-y-1 opacity-0"
+group-hover/skill:-translate-y-1"
 >
   <title>PhpStorm</title>
   <defs>
