--- a/public/skills/React.astro
+++ b/public/skills/React.astro
@@ -1,5 +1,5 @@
 <svg
-  class="absolute overflow-visible bottom-[34%] h-[60%] w-[60%] z-10 transition group-hover/skill:-translate-y-1 opacity-0"
+  class="absolute overflow-visible bottom-[34%] h-[60%] w-[60%] z-10 transition group-hover/skill:-translate-y-1"
   width="100%"
   height="100%"
   viewBox="-10.5 -9.45 21 18.9"
