--- a/public/skills/Tailwind.astro
+++ b/public/skills/Tailwind.astro
@@ -1,5 +1,5 @@
 <svg
-  class="absolute overflow-visible bottom-[34%] h-[60%] w-[60%] z-10 transition group-hover/skill:-translate-y-1 opacity-0"
+  class="absolute overflow-visible bottom-[34%] h-[60%] w-[60%] z-10 transition group-hover/skill:-translate-y-1"
   xmlns="http://www.w3.org/2000/svg"
   viewBox="0.1 0.1 799.7 479.7"
   style="--motion-translateY: 0px; opacity: 1;"
