--- a/public/skills/Vercel.astro
+++ b/public/skills/Vercel.astro
@@ -7,7 +7,7 @@
   xmlns:xlink="http://www.w3.org/1999/xlink"
   preserveAspectRatio="xMidYMid"
   class="absolute overflow-visible bottom-[34%] h-[60%] w-[60%] z-10 transition
-group-hover/skill:-translate-y-1 opacity-0"
+group-hover/skill:-translate-y-1"
 >
   <g>
     <polygon fill="#000000" points="128 0 256 221.705007 0 221.705007"
