--- a/public/skills/Xampp.astro
+++ b/public/skills/Xampp.astro
@@ -7,7 +7,7 @@
   xmlns="http://www.w3.org/2000/svg"
   xmlns:xlink="http://www.w3.org/1999/xlink"
   class="absolute overflow-visible bottom-[34%] h-[60%] w-[60%] z-10 transition
-group-hover/skill:-translate-y-1 opacity-0"
+group-hover/skill:-translate-y-1"
 >
   <defs></defs>
   <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
