--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -3,8 +3,8 @@ import { Image } from "astro:assets";
 import imgWebp from "../../public/img.webp";
 ---
 
-<section class="container mx-auto h-screen">
-  <div class="flex items-center justify-center mx-auto h-screen">
+<section class="container mx-auto">
+  <div class="flex items-center justify-center mx-auto self-center mt-[15%]">
     <div class="w-1/2">
       <h2 class="text-7xl mb-3">Junior Pezantes</h2>
       <p class="text-2xl mb-3">
