--- a/src/components/Skills/Skills.astro
+++ b/src/components/Skills/Skills.astro
@@ -31,143 +31,144 @@ import Deno from "../../../public/skills/Deno.astro";
 import SkillItem from "../Skills/SkillItem.astro";
 
 ---
-
-<table>
-  <tr>
-    <th class="w-1/12"> Frontend </th>
-    <th class="w-11/12 flex flex-wrap gap-4">
-      <SkillItem>
-        <Html />
-      </SkillItem>
-
-      <SkillItem>
-        <Css />
-      </SkillItem>
-
-      <SkillItem>
-        <Js />
-      </SkillItem>
-
-      <SkillItem>
-        <Jquery />
-      </SkillItem>
-
-      <SkillItem>
-        <AstroLogo />
-      </SkillItem>
-
-      <SkillItem>
-        <Vue />
-      </SkillItem>
-
-      <SkillItem>
-        <React />
-      </SkillItem>
+<section class="container p-8 lg:md:sm:mx-auto">
+  <table>
+    <tr>
+      <th class="w-1/12"> Frontend </th>
+      <th class="w-11/12 flex flex-wrap gap-4">
+        <SkillItem>
+          <Html />
+        </SkillItem>
+  
+        <SkillItem>
+          <Css />
+        </SkillItem>
+  
+        <SkillItem>
+          <Js />
+        </SkillItem>
+  
+        <SkillItem>
+          <Jquery />
+        </SkillItem>
+  
+        <SkillItem>
+          <AstroLogo />
+        </SkillItem>
+  
+        <SkillItem>
+          <Vue />
+        </SkillItem>
+  
+        <SkillItem>
+          <React />
+        </SkillItem>
+        
+        <SkillItem>
+          <Boostrap />
+        </SkillItem>
+  
+        <SkillItem>
+          <Tailwind />
+        </SkillItem>
+  
+      </th>
+    </tr>
+    <tr>
+      <th class="w-1/12">Backend</th>
+      <th class="w-11/12 flex flex-wrap gap-4"> 
+  
+        <SkillItem>
+          <Laravel />
+        </SkillItem>
+  
+        <SkillItem>
+          <Php />
+        </SkillItem>
+  
+        <SkillItem>
+          <Deno />
+        </SkillItem>
       
-      <SkillItem>
-        <Boostrap />
-      </SkillItem>
-
-      <SkillItem>
-        <Tailwind />
-      </SkillItem>
-
-    </th>
-  </tr>
-  <tr>
-    <th class="w-1/12">Backend</th>
-    <th class="w-11/12 flex flex-wrap gap-4"> 
-
-      <SkillItem>
-        <Laravel />
-      </SkillItem>
-
-      <SkillItem>
-        <Php />
-      </SkillItem>
-
-      <SkillItem>
-        <Deno />
-      </SkillItem>
-    
-    </th>
-  </tr>
-  <tr>
-    <th class="w-1/12">Base de datos</th>
-    <th class="w-11/12 flex flex-wrap gap-4"> 
-
-      <SkillItem>
-        <MySQL />
-      </SkillItem>
-
-      <SkillItem>
-        <MongoDB />
-      </SkillItem>
-    
-    </th>
-  </tr>
-
-  <tr>
-    <th class="w-1/12">Despliegue</th>
-    <th class="w-11/12 flex flex-wrap gap-4"> 
-
-      <SkillItem>
-        <Vercel />
-      </SkillItem>
-
-      <SkillItem>
-        <Netlify />
-      </SkillItem>
-    
-    </th>
-  </tr>
-  <tr>
-    <th class="w-1/12">Tools</th>
-    <th class="w-11/12 flex flex-wrap gap-4"> 
+      </th>
+    </tr>
+    <tr>
+      <th class="w-1/12">Base de datos</th>
+      <th class="w-11/12 flex flex-wrap gap-4"> 
+  
+        <SkillItem>
+          <MySQL />
+        </SkillItem>
+  
+        <SkillItem>
+          <MongoDB />
+        </SkillItem>
       
-      <SkillItem>
-        <VsCode />
-      </SkillItem>
-
-      <SkillItem>
-        <Vs />
-      </SkillItem>
-
-      <SkillItem>
-        <PhpStorm />
-      </SkillItem>
-
-      <SkillItem>
-        <Git />
-      </SkillItem>
-
-      <SkillItem>
-        <GitHub />
-      </SkillItem>
+      </th>
+    </tr>
+  
+    <tr>
+      <th class="w-1/12">Despliegue</th>
+      <th class="w-11/12 flex flex-wrap gap-4"> 
+  
+        <SkillItem>
+          <Vercel />
+        </SkillItem>
+  
+        <SkillItem>
+          <Netlify />
+        </SkillItem>
       
-      <SkillItem>
-        <GitLab />
-      </SkillItem>
-
-      <SkillItem>
-        <Npm />
-      </SkillItem>
-
-      <SkillItem>
-        <Yarn />
-      </SkillItem>
-      <SkillItem>
-        <Postman />
-      </SkillItem>
-      <SkillItem>
-        <Figma />
-      </SkillItem>
-      <SkillItem>
-        <Xampp />
-      </SkillItem>
-      <SkillItem>
-        <Vite />
-      </SkillItem>
-    </th>
-  </tr>
-</table>
+      </th>
+    </tr>
+    <tr>
+      <th class="w-1/12">Tools</th>
+      <th class="w-11/12 flex flex-wrap gap-4"> 
+        
+        <SkillItem>
+          <VsCode />
+        </SkillItem>
+  
+        <SkillItem>
+          <Vs />
+        </SkillItem>
+  
+        <SkillItem>
+          <PhpStorm />
+        </SkillItem>
+  
+        <SkillItem>
+          <Git />
+        </SkillItem>
+  
+        <SkillItem>
+          <GitHub />
+        </SkillItem>
+        
+        <SkillItem>
+          <GitLab />
+        </SkillItem>
+  
+        <SkillItem>
+          <Npm />
+        </SkillItem>
+  
+        <SkillItem>
+          <Yarn />
+        </SkillItem>
+        <SkillItem>
+          <Postman />
+        </SkillItem>
+        <SkillItem>
+          <Figma />
+        </SkillItem>
+        <SkillItem>
+          <Xampp />
+        </SkillItem>
+        <SkillItem>
+          <Vite />
+        </SkillItem>
+      </th>
+    </tr>
+  </table>
+</section>
