--- a/src/components/TimeLine.astro
+++ b/src/components/TimeLine.astro
@@ -2,7 +2,7 @@
 import Check from "../../public/icons/Check.astro";
 ---
 
-<section class="container px-5 lg:md:sm:mx-auto">
+<section class="container p-8 lg:md:sm:mx-auto">
   <h2 class="text-4xl text-center pl-8">A Detailed Summary of Life</h2>
   <ul class="timeline">
     <li class="timeline">
