--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -6,12 +6,11 @@ import imgWebp from "../../public/img.webp";
 <section class="container mx-auto p-8">
   <div class="flex items-center justify-center mx-auto self-center mt-[15%]">
     <div class="w-1/2">
-      <h2 class="text-7xl mb-3">Junior Pezantes</h2>
-      <p class="text-2xl mb-3">
-        Ingeniero de software & desarrollador fullstack.
-        <span class="" aria-hidden="true">|</span>
+      <h2 class="text-7xl mb-3 text-slate-800">Junior Pezantes</h2>
+      <p class="typing text-2xl mb-3 text-slate-600">
+        Ingeniero de software & desarrollador fullstack
       </p>
-      <p class="mb-3">
+      <p class="mb-5 text-slate-500">
         Diseño y desarrollo servicios para clientes de todos los tamaños,
         especializándome en la creación de sitios web, servicios web y tiendas
         en línea modernos y elegantes.
@@ -35,3 +34,21 @@ import imgWebp from "../../public/img.webp";
     </div>
   </div>
 </section>
+
+<style>
+  .typing::after {
+    content: '|';
+    position: relative;
+    right: 5px;
+    bottom: 2px;
+    animation: blink 1s step-end infinite;
+}
+  @keyframes blink {
+    from, to {
+        color: transparent
+    }
+    50% {
+        color: black;
+    }
+}
+</style>
