--- a/src/components/TimeLine.astro
+++ b/src/components/TimeLine.astro
@@ -3,7 +3,7 @@ import Check from "../../public/icons/Check.astro";
 ---
 
 <section class="container p-8 lg:md:sm:mx-auto">
-  <h2 class="text-4xl text-center pl-8">A Detailed Summary of Life</h2>
+  <h2 class="text-4xl text-left pl-8">A Detailed Summary of Life</h2>
   <ul class="timeline">
     <li class="timeline">
       <Check/>
