Fix: Color Text

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -7,9 +7,9 @@ import imgWebp from "../../public/img.webp";
   <div class="flex items-center justify-center mx-auto self-center mt-[15%]">
     <div class="w-1/2">
       <h2 class="text-7xl mb-3 text-slate-800">Junior Pezantes</h2>
-      <p class="typing text-2xl mb-3 text-slate-600">
+      <h3 class="typing text-2xl mb-3 text-slate-600">
         Ingeniero de software & desarrollador fullstack
-      </p>
+      </h3>
       <p class="mb-5 text-slate-500">
         Diseño y desarrollo servicios para clientes de todos los tamaños,
         especializándome en la creación de sitios web, servicios web y tiendas
