--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -37,4 +37,14 @@ text-wrap: pretty;
 h1, h2, h3, h4, h5, h6{
 	text-wrap: balance;
 }
+
+h2, th{
+	color: #1e293b;
+}
+h3, li{
+	color: #475569; 
+}
+p{
+	color: #64748b;
+}
 </style>
